Fix for horizontal alignment on  droplists

--- a/Survey/source/styles/formal/_o-select-combobox.scss
+++ b/Survey/source/styles/formal/_o-select-combobox.scss
@@ -2,6 +2,10 @@
 
 $default-text-width: globals.$default-input-width;
 
+.o-question-response:not(.o-question-combobox) {
+    position: relative;
+}
+
 .o-combobox {
     input[type=text] {
         padding: 10px 16px;
